envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 15000
static_resources:
  listeners:
  - address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          generate_request_id: true
          codec_type: "AUTO"
          stat_prefix: ingress_http
          route_config:
            name: route
            virtual_hosts:
            - name: service
              domains: [ "*" ]
              routes:
              - match:
                  prefix: "/unprotected"
                route:
                  cluster: service
                  timeout: 30s
                typed_per_filter_config:
                  envoy.filters.http.ext_proc:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                    disabled: true
              - match:
                  prefix: "/"
                route:
                  cluster: service
                  timeout: 30s
                # omitting renders the following defaults
                # typed_per_filter_config:
                #   envoy.filters.http.ext_proc:
                #     "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                #     disabled: false
          http_filters:
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
              failure_mode_allow: false
              async_mode: false
              processing_mode:
                request_header_mode: "SEND"
                response_header_mode: "SKIP"
                request_body_mode: "SKIP"
                response_body_mode: "SKIP"
                request_trailer_mode: "SKIP"
                response_trailer_mode: "SKIP"
              grpc_service:
                envoy_grpc:
                  cluster_name: ext-proc
          - name: envoy.filters.http.router
            typed_config:
             "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: service
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: { }
    load_assignment:
      cluster_name: service
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: ext_proc_demo_service
                    port_value: 80
  - name: ext-proc
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: { }
    load_assignment:
      cluster_name: ext-proc
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: ext_proc_demo_ext_proc
                    port_value: 50051
